--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -12,6 +12,9 @@
     <form id="login-form">
       <input type="text" name="username" placeholder="Username" required />
       <input type="password" name="password" placeholder="Password" required />
+      <a href="http://localhost:8081/auth?auth-service=google">
+        <img src="/static/image/google-icon.png" alt="icon" width="32" height="32">
+      </a>
       <button type="submit">Login</button>
     </form>
     <div class="footer">Access is monitored.</div>
