Auto login using cookie

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -6,9 +6,12 @@
   <link rel="stylesheet" href="/static/css/index.css">
 </head>
 <body>
+
+  <script src="/static/js/auto-login.js" defer></script>
+
   <h1>bazar</h1>
   <p>underground market for digital goods</p>
-  <a class="btn" href="/login">Enter Market</a>
+  <a class="btn" href="/login" id="marketLink">Enter Market</a>
 
   <div class="footer">© 2025 bazar.inc</div>
 </body>
