--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Card Loader Example</title>
   <link rel="stylesheet" href="static/css/home.css">
+  <link rel="icon" href="static/image/open.png" type="image/png">
 </head>
 <body>
     <header class="navbar">
