Fix upload handler

--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -24,7 +24,9 @@
           <i class="fas fa-bell"></i>
           <div class="notification-badge">3</div>
         </div>
-        <div class="profile-pic">JS</div>
+          <a href="/profile">
+        <div class="profile-pic" >JS</div>
+      </a>
       </div>
       
       <!-- Notification dropdown -->
